# keystream

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  biome.json  package.json  pnpm-lock.yaml  tauri-updater.pub  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: security-reviewer.md  test-writer.md
.claude/hooks/: check-secrets.sh
.claude/rules/: conventions.md  security.md  testing.md
.github/workflows/: auto-release.yml  ci.yml.disabled  release.yml
docs/: backlog.md  design-plan.md  lessons.md  poc2-results.md  progress.md  releasing.md  updater-signing.md  v2-frontend-design.md
docs/audits/: README.md  audit-2026-04-30.md
docs/poc/: README.md
docs/runbooks/: live-avd-smoke.md
poc2/: README.md  methods.md  plan.md
poc2/avd/: compare_runs.py
poc2/samples/: README.md  delimiters.txt  shift_heavy.txt  stress_15k.txt
poc2/scripts/: 00-copy-py-to-avd.sh  01-local-textedit.sh  02-mod-hold-sweep.sh  02b-char-pause-sweep.sh  02c-flags-on-char.sh  02c2-flags-on-char-stress.sh  02d-sandwich-hid-tap.sh  02e-sandwich-private-source.sh  02f-flag-on-char-hid.sh  02g-flag-on-char-private.sh  02h-full-stack.sh  02i-applescript.sh  02j-enigo.sh  03-avd-sandwich-private.sh  03-per-chunk-warmup.sh  03b-avd-flag-on-char.sh  03c-avd-flag-hid.sh  03d-avd-flag-private.sh  03e-avd-full-stack.sh  03f-avd-applescript.sh  03g-avd-enigo.sh  04-shift-up-between.sh  04a-stress-local-sandwich-private.sh  04b-stress-local-applescript.sh  05-baseline-no-folds.sh  05a-stress-avd-sandwich-private.sh  05b-stress-avd-applescript.sh  05c-stress-avd-applescript-throttled.sh  06-1ms.sh  06-2ms.sh  06-3ms.sh  06-4ms.sh  06-5ms.sh  06-local-fast.sh  06a-local-speed-sweep.sh  07-avd-5ms.sh  07-avd-6ms.sh  07-avd-7ms.sh  07-avd-8ms.sh  gen_stress_corpus.py
poc2/typer2/: Cargo.toml
poc2/typer2/src/: main.rs  methods.rs  shift_drop.rs
scripts/: gen-icon.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  ocr_helper-aarch64-apple-darwin  region_picker-aarch64-apple-darwin
src-tauri/binaries/src/: ocr_helper.swift
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: calibrate.rs  file_io.rs  folder_tree.rs  json_log.rs  lib.rs  lint.rs  log_commands.rs  main.rs  permissions.rs  persist.rs  send.rs  send_state.rs  settings.rs  state.rs  validation.rs  verify.rs
src-tauri/tests/: commands_smoke.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: action-bar.test.tsx  action-bar.tsx  binary-file-warning.test.tsx  binary-file-warning.tsx  controls.tsx  countdown-overlay.test.tsx  countdown-overlay.tsx  fail-diff.test.tsx  fail-diff.tsx  file-explorer.test.tsx  file-explorer.tsx  main-header.test.tsx  main-header.tsx  resize-handle.test.tsx  resize-handle.tsx  settings-page.test.tsx  settings-page.tsx  settings-shell.test.tsx  settings-shell.tsx  settings-sidebar.test.tsx  settings-sidebar.tsx  sidebar-row.tsx  sidebar.test.tsx  sidebar.tsx  status-strip.test.tsx  status-strip.tsx  text-panel.test.tsx  text-panel.tsx  theme-provider.test.tsx  theme-provider.tsx
src/lib/: ipc.ts
tests/: setup.ts
tests/integration/: chunk-state-machine.integration.test.tsx
typer-core/: Cargo.toml
typer-core/src/: align.rs  config.rs  control.rs  diff.rs  error.rs  event_source.rs  fold.rs  keymap.rs  lib.rs  lint.rs  ocr.rs  region.rs  scroll.rs  sender.rs  stitch.rs  verify.rs
typer-core/tests/: chunked_verify.rs  sender_regression.rs
typer-core/tests/fixtures/: code_corpus_keystrokes.txt
(+41 files in other folders)
