[workspace]
resolver = "2"
members = ["src-tauri", "typer-core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["Aaron Wang"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
