[workspace]
resolver = "2"
members = ["src-tauri", "typer-core"]
# The PoC Rust CLI is reference material, not a workspace member. Keep it
# compilable as a standalone crate so `cd docs/poc/typer && cargo build`
# still works for anyone verifying PoC claims independently.
exclude = ["docs/poc/typer"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["Aaron Wang"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
