[package]
name = "keystream"
description = "Keystream — keystroke sender with OCR-based verification for virtual desktops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "keystream_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
open = "5"
tauri = { version = "2.10.3" }
tauri-plugin-log = "2"
typer-core = { path = "../typer-core" }
