[package]
name = "typer-core"
description = "Keystroke sender and OCR verify loop for Keystream. Platform: macOS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "typer_core"

[dependencies]
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
core-graphics = "0.24"
rand = "0.8"
dirs = "5"
# CLI binary (src/bin/typer.rs) only. Not used by the library itself.
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
