[package]
name = "typer2"
description = "poc2 experiment harness for Keystream — input-side resilience probes"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
authors = ["Aaron Wang"]
license = "MIT"

# Standalone crate, excluded from the main workspace (see /Cargo.toml).
# Mirrors docs/poc/typer arrangement.

[[bin]]
name = "typer2"
path = "src/main.rs"

[dependencies]
typer-core = { path = "../../typer-core" }
core-graphics = "0.24"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
# 02j third-party reference probe.
enigo = "0.6"
